add gc configuration for CMS and G1 collector